--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -10,7 +10,7 @@ rmd_files: [
   "cs1-practical-introduction.Rmd",
   "cs1-practical-one_sample_t_test.Rmd",
   "cs1-practical-one_sample_wilcoxon.Rmd",
-  #"cs1-practical-two_sample_t_test.Rmd",
+  "cs1-practical-two_sample_t_test.Rmd",
   #"cs1-practical-two_sample_mann_whitney.Rmd",
   #"cs1-practical-two_sample_paired_t_test.Rmd",
   #"cs1-practical-two_sample_wilcoxon.Rmd",
