--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,12 +5,12 @@ delete_merged_file: true
 rmd_files: [
   "index.Rmd",
 
-  #"cs1-intro.Rmd",
+  "cs1-intro.Rmd",
   ##"cs1-background.Rmd",
-  #"cs1-practical-introduction.Rmd",
-  #"cs1-practical-one_sample_t_test.Rmd",
-  #"cs1-practical-one_sample_wilcoxon.Rmd",
-  #"cs1-practical-two_sample_t_test.Rmd",
+  "cs1-practical-introduction.Rmd",
+  "cs1-practical-one_sample_t_test.Rmd",
+  "cs1-practical-one_sample_wilcoxon.Rmd",
+  "cs1-practical-two_sample_t_test.Rmd",
   "cs1-practical-two_sample_mann_whitney.Rmd",
   #"cs1-practical-two_sample_paired_t_test.Rmd",
   #"cs1-practical-two_sample_wilcoxon.Rmd",
