--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,6 +38,9 @@ website:
           - cs1_practical_two-sample-mann-whitney.qmd
           - cs1_practical_two-sample-paired-t-test.qmd
           - cs1_practical_two-sample-paired-wilcoxon.qmd
+      - section: "Categorical predictors"
+        contents:
+          - cs2_practical_anova.qmd
 
 format:
   html:
