0711 fresh website render

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,7 +42,7 @@ website:
       - text: "Setup"
         href: setup.qmd
       - text: "Materials"
-        href: materials.md
+        href: materials.qmd
     right:
       - icon: github
         href: https://github.com/cambiotraining/corestats/
