1611 cs5 mod selection exercises

--- a/materials/_sidebar.yml
+++ b/materials/_sidebar.yml
@@ -27,3 +27,4 @@ website:
         - section: "Multiple predictors"
           contents:
             - "materials/cs5_practical_multiple-linear-regression.qmd"
+            - "materials/cs5_practical_model-comparisons.qmd"
