1611 cs6 partial exercises

--- a/materials/_sidebar.yml
+++ b/materials/_sidebar.yml
@@ -28,3 +28,6 @@ website:
           contents:
             - "materials/cs5_practical_multiple-linear-regression.qmd"
             - "materials/cs5_practical_model-comparisons.qmd"
+        - section: "Power analysis"
+          contents:
+            - "materials/cs6_practical_power-analysis.qmd"
