--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: 
+    branches:
       - main
       - master
 
@@ -9,10 +9,10 @@ name: Render & Publish Site
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    
-    env: 
+
+    env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -20,10 +20,27 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          version: 1.2.112
+          version: 1.2.335
+
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+
+      - name: R dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages:
+            any::rmarkdown
+            any::knitr
+            any::jsonlite
+            any::downlit
+            any::xml2
 
       - name: Render Site
-        uses: quarto-dev/quarto-actions/render@v2
+        run: |
+          quarto render
+        # uses: quarto-dev/quarto-actions/render@v2
 
       - name: No Jekyll
         run: |
