--- a/_extensions/cambiotraining/courseformat/_extension.yml
+++ b/_extensions/cambiotraining/courseformat/_extension.yml
@@ -1,6 +1,6 @@
 title: Course Page Format
 author: Cambridge Informatics Training
-version: 1.0.5
+version: 1.2.1
 contributes:
   formats:
     html:
@@ -12,3 +12,6 @@ contributes:
       code-copy: true
   shortcodes:
     - star_levels.lua
+    - citation_cff.lua
+  filters:
+    - callout_exercise.lua
